vlib/v/checker/tests/compile_error_explicit_type.vv
module main

fn son[T](val T) {
	$if T !is int {
		$compile_error('son only take `int` as input')
	}
}

fn main() {
	son[int](123)
	son[bool](false)
	son[int](456)
	son[string]('hello')
}
